#11888 EMS 연동으로 가져온 CI 데이터에 대하여 수정 관련 오류 -> 일감 분석 및 수정 진행

--- a/src/main/resources/public/template/cmdb/ci/ciEditModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciEditModal.html
@@ -6,6 +6,7 @@
         <div class="edit-form">
             <input type="hidden" id="ciId" th:value="${ciData?.ciId}"/>
             <input type="hidden" id="ciIconData" th:value="${ciData?.ciIconData}"/>
+            <input type="hidden" id="interlink" th:value="${ciData?.interlink}"/>
             <!-- CI No -->
             <div class="flex-column edit-row">
                 <label class="field-label" for="ciNo">
