--- a/src/main/resources/public/template/report/reportTemplate.html
+++ b/src/main/resources/public/template/report/reportTemplate.html
@@ -235,6 +235,8 @@
 
     // Ajax 통신
     function restSubmit(method, url, data) {
+        console.log(data);
+        return false;
         const opt = {
             method: method,
             url: url,
