--- a/src/main/resources/public/template/custom-code/customCode.html
+++ b/src/main/resources/public/template/custom-code/customCode.html
@@ -346,86 +346,86 @@
     //insert/update
     function saveCustomCode(method) {
         const type = getTypeId();
-        if (emptyCheck(type)) {
-            const sessionKeySelectBox = document.getElementById('sessionKey');
-            let data = {
-                customCodeName: document.getElementById('customCodeName').value,
-                type: type,
-                sessionKey: sessionKeySelectBox.options[sessionKeySelectBox.selectedIndex].value
-            };
-            if (type === 'table') {
-                data.targetTable = document.getElementById('targetTable').value;
-                data.searchColumn = document.getElementById('searchColumn').value;
-                data.valueColumn = document.getElementById('valueColumn').value;
 
-                    let conditionDataArr = [];
-                    let childNodes = document.getElementById('condition').childNodes;
-                    for (let i = 0; i < childNodes.length; i++) {
-                        let conditionObj = {};
-                        let conditionKey = childNodes[i].getElementsByTagName('select')[0].value;
-                        let conditionOperator = childNodes[i].getElementsByTagName('select')[1].value;
-                        let conditionValue = childNodes[i].getElementsByTagName('input')[2].value;
-                        if (conditionKey === 'use_yn') {
-                            if (conditionValue.toLowerCase() === 'true' || conditionValue.toLowerCase() === 'false') {
-                                conditionObj.conditionKey = conditionKey;
-                                conditionObj.conditionOperator = conditionOperator;
-                                conditionObj.conditionValue = conditionValue;
-                                conditionDataArr.push(conditionObj);
-                            } else {
-                                zAlert.warning(i18n.msg('customCode.msg.checkUseYnValue'));
-                                return false;
-                            }
-                        } else {
-                            conditionObj.conditionKey = conditionKey;
-                            conditionObj.conditionOperator = conditionOperator;
-                            conditionObj.conditionValue = conditionValue;
-                            conditionDataArr.push(conditionObj);
-                        }
-                        for (let k = 0; k < i; k++) {
-                            let childConditionKey = childNodes[k].getElementsByTagName('select')[0].value;
-                            if (conditionKey === childConditionKey) {
-                                zAlert.warning(i18n.msg('customCode.msg.selectNotDuplicateSearchColumn'));
-                                return false;
-                            }
-                        }
+        if (!emptyCheck(type)) { return false; }
+
+        const sessionKeySelectBox = document.getElementById('sessionKey');
+        let data = {
+            customCodeName: document.getElementById('customCodeName').value,
+            type: type,
+            sessionKey: sessionKeySelectBox.options[sessionKeySelectBox.selectedIndex].value
+        };
+        if (type === 'table') {
+            data.targetTable = document.getElementById('targetTable').value;
+            data.searchColumn = document.getElementById('searchColumn').value;
+            data.valueColumn = document.getElementById('valueColumn').value;
+
+            let conditionDataArr = [];
+            let childNodes = document.getElementById('condition').childNodes;
+            for (let i = 0; i < childNodes.length; i++) {
+                let conditionObj = {};
+                let conditionKey = childNodes[i].getElementsByTagName('select')[0].value;
+                let conditionOperator = childNodes[i].getElementsByTagName('select')[1].value;
+                let conditionValue = childNodes[i].getElementsByTagName('input')[2].value;
+                if (conditionKey === 'use_yn') {
+                    if (conditionValue.toLowerCase() === 'true' || conditionValue.toLowerCase() === 'false') {
+                        conditionObj.conditionKey = conditionKey;
+                        conditionObj.conditionOperator = conditionOperator;
+                        conditionObj.conditionValue = conditionValue;
+                        conditionDataArr.push(conditionObj);
+                    } else {
+                        zAlert.warning(i18n.msg('customCode.msg.checkUseYnValue'));
+                        return false;
                     }
-                    data.condition = JSON.stringify(conditionDataArr);
                 } else {
-                    data.pCode = document.getElementById('pCode').value;
+                    conditionObj.conditionKey = conditionKey;
+                    conditionObj.conditionOperator = conditionOperator;
+                    conditionObj.conditionValue = conditionValue;
+                    conditionDataArr.push(conditionObj);
                 }
-                if (method === 'PUT') {
-                    data.customCodeId = /*[[${customCode?.customCodeId}]]*/'';
+                for (let k = 0; k < i; k++) {
+                    let childConditionKey = childNodes[k].getElementsByTagName('select')[0].value;
+                    if (conditionKey === childConditionKey) {
+                        zAlert.warning(i18n.msg('customCode.msg.selectNotDuplicateSearchColumn'));
+                        return false;
+                    }
                 }
-                restSubmit(method, '/rest/custom-codes', data);
             }
-            aliceJs.fetchText('/rest/custom-codes', {
-                method: method,
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            }).then((status) => {
-                switch (status) {
-                    case STATUS_SUCCESS:
-                        zAlert.success(i18n.msg('common.msg.save'), function () {
-                            location.href = '/custom-codes/search';
-                        });
-                        break;
-                    case STATUS_ERROR_CUSTOM_CODE_USED:
-                        zAlert.success(i18n.msg('customCode.msg.customCodeUsed'));
-                        break;
-                    case STATUS_ERROR_CUSTOM_CODE_NAME_DUPLICATION:
-                        zAlert.warning(i18n.msg('customCode.msg.duplicateCustomCodeName'));
-                        break;
-                    case STATUS_ERROR_CUSTOM_CODE_P_CODE_NOT_EXIST:
-                        zAlert.warning(i18n.msg('customCode.msg.pCodeNotExist'));
-                        break;
-                    default :
-                        zAlert.danger(i18n.msg('common.msg.fail'));
-                        break;
-                }
-            });
+            data.condition = JSON.stringify(conditionDataArr);
+        } else {
+            data.pCode = document.getElementById('pCode').value;
         }
+        if (method === 'PUT') {
+            data.customCodeId = /*[[${customCode?.customCodeId}]]*/'';
+        }
+
+        aliceJs.fetchText('/rest/custom-codes', {
+            method: method,
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(data)
+        }).then((status) => {
+            switch (status) {
+                case STATUS_SUCCESS:
+                    zAlert.success(i18n.msg('common.msg.save'), function () {
+                        location.href = '/custom-codes/search';
+                    });
+                    break;
+                case STATUS_ERROR_CUSTOM_CODE_USED:
+                    zAlert.success(i18n.msg('customCode.msg.customCodeUsed'));
+                    break;
+                case STATUS_ERROR_CUSTOM_CODE_NAME_DUPLICATION:
+                    zAlert.warning(i18n.msg('customCode.msg.duplicateCustomCodeName'));
+                    break;
+                case STATUS_ERROR_CUSTOM_CODE_P_CODE_NOT_EXIST:
+                    zAlert.warning(i18n.msg('customCode.msg.pCodeNotExist'));
+                    break;
+                default :
+                    zAlert.danger(i18n.msg('common.msg.fail'));
+                    break;
+            }
+        });
     }
 
     function deleteCustomCode() {
