--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -53,7 +53,7 @@
         </div>
         <div class="z-button-list">
             <button class="z-button primary"
-                    th:if="(${#authentication.details.userKey} != (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '') and ${#authorization.expression('hasAuthority(''board.admin.update'')')})
+                    th:if="(${#authorization.expression('hasAuthority(''board.admin.update'')')})
                            or (${#authentication.details.userKey} == (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '') and ${#authorization.expression('hasAuthority(''board.create'')')})"
                     th:onclick="'location.href =\'' + @{/boards/articles/{id}/edit(id=${boardInfo?.boardId})}+'\''"
                     th:text="#{common.btn.toModify}">
@@ -64,7 +64,7 @@
                     th:text="#{board.btn.reply}">
             </button>
             <button class="z-button secondary"
-                    th:if="(${#authentication.details.userKey} != (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '') and ${#authorization.expression('hasAuthority(''board.admin.delete'')')})
+                    th:if="(${#authorization.expression('hasAuthority(''board.admin.delete'')')})
                            or (${#authentication.details.userKey} == (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '') and ${#authorization.expression('hasAuthority(''board.create'')')})"
                     th:onclick="deleteBoard()"
                     th:text="#{common.btn.delete}">
@@ -110,7 +110,7 @@
                 content: (boardId !== "") ? JSON.parse(/*[[${boardInfo?.boardContents}]]*/) : ''
             });
 
-            OverlayScrollbars(document.querySelectorAll('.z-page-content'), { className: 'scrollbar' });
+            OverlayScrollbars(document.querySelectorAll('.z-page-content'), {className: 'scrollbar'});
             OverlayScrollbars(document.querySelector('.view'), {className: 'scrollbar'});
         };
 
@@ -185,6 +185,9 @@
                 resultMsg = i18n.msg('common.msg.save');
             } else if (method === 'delete') {
                 resultMsg = i18n.msg('common.msg.delete');
+                zAlert.success(resultMsg, function () {
+                    getBoardCommentList();
+                });
             }
             const opt = {
                 method: method,
