--- a/src/main/resources/public/scss/document/_modal.scss
+++ b/src/main/resources/public/scss/document/_modal.scss
@@ -91,26 +91,8 @@
             }
           }
           // 연관 관계
-          .z-relation-group {
-            .z-relation-title-group {
-              height: $cmdb-ci-relation-height;
-              .z-sub-title {
-                font-size: $cmdb_ci-relation-font-size;
-              }
-            }
-            .z-relation-select-box-group {
-              width: $cmdb-ci-relation-select-group-width;
-              font-size: $cmdb-ci-relation-select-group-font-size;
-              font-weight: $cmdb-ci-relation-select-group-font-weight;
-              font-family: $cmdb-ci-relation-select-group-font-family;
-              padding: $cmdb-ci-relation-select-group-padding;
-            }
-            .z-target-ci-select-box {
-              width: $cmdb-ci-target-select-box-width;
-            }
-            .z-relation-type-select-box {
-              width: $cmdb-ci-relation-select-box-width;
-            }
+          .z-relation-relation-group {
+            .z-sub-title { margin: auto 0; }
           }
         }
         .cmdb-ci-content-view {
