--- a/src/main/resources/public/template/cmdb/ci/ciEditModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciEditModal.html
@@ -91,8 +91,9 @@
                     <thead class="z-table-head">
                     <tr class="flex-row align-items-center">
                         <th style="width: 10%;" class="align-center"></th>
-                        <th style="width: 45%;" class="align-left" th:text="#{cmdb.ci.label.type}"></th>
-                        <th style="width: 45%;" class="align-left" th:text="#{cmdb.ci.label.name}"></th>
+                        <th style="width: 40%;" class="align-left" th:text="#{cmdb.ci.label.type}"></th>
+                        <th style="width: 40%;" class="align-left" th:text="#{cmdb.ci.label.name}"></th>
+                        <th style="width: 10%;" class="align-center"></th>
                     </tr>
                     </thead>
                     <tbody class="z-table-body" id="ciRelation"/></tbody>
