#11957 Response 구조 변경 공통 함수 및 샘플 작성 1. 공통 Response 구조 구현 2. FAQ 처리 부분 수정 3. API 호출 부분 수정

--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -86,20 +86,20 @@
         if (!validation()) { return false; }
         const faqId = (method === 'POST') ? '' : '/' + /*[[${faq?.faqId}]]*/'';
         const data = aliceJs.formDataToObject(document.getElementById('faqForm'))
-        aliceJs.fetchText('/rest/faqs' + faqId, {
+        aliceJs.fetchJson('/rest/faqs' + faqId, {
             method: method,
             headers: {
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify(data)
-        }).then((status) => {
-            let resultMsg = [[#{faq.msg.duplicateTitleInCategory}]];
-            if (status === 'true') {
-                resultMsg = [[#{common.msg.save}]];
+        }).then((result) => {
+            let resultMsg = [[#{common.msg.save}]];
+            if (result.status === 200) {
                 zAlert.success(resultMsg, function () {
                     window.location.href = '/faqs/search';
                 });
             } else {
+                resultMsg = [[#{faq.msg.duplicateTitleInCategory}]];
                 zAlert.warning(resultMsg);
             }
         });
